[tool.poetry]
name = "ensure_vpn"
version = "0.2.0"
description = "A function to ensure you are connected to your favorite VPN before running your script."
authors = ["Francesco Truzzi <francesco@truzzi.me>"]
readme = "README.md"
repository = "https://github.com/ftruzzi/ensure_vpn"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
returns = "0.15.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-recording = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
